--- a/LocAdoc/app/build.gradle
+++ b/LocAdoc/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     // AWS
+    compile 'commons-codec:commons-codec:1.3'
     compile 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.3.2'
     compile 'com.amazonaws:aws-android-sdk-core:2.3.2'
     compile 'com.amazonaws:aws-android-sdk-s3:2.3.2'
