--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -6,6 +6,24 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <activity
+        android:name="com.apkgetter.SearchResultsActivity"
+        android:label="@string/app_name"
+        android:launchMode="singleTop">
+        <intent-filter>
+            <action android:name="android.intent.action.SEARCH" />
+        </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+        </intent-filter>
+
+        <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
+    </activity>
 
     <application
         android:allowBackup="true"
@@ -16,16 +34,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".UI.Login.LoginActivity"
-            android:label="@string/app_name">
-
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".UI.Signup.SignUp"
             android:label="@string/title_activity_sign_up" />
         <activity
             android:name=".UI.ConfirmSignUp.Activity_SignUp_Confirm"
             android:label="@string/title_activity_confirm_sign_up" />
-        <activity android:name=".UI.NewPassword.NewPasswordActivity"></activity>
+        <activity android:name=".UI.NewPassword.NewPasswordActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -33,6 +49,7 @@
         <meta-data
             android:name="android.app.default_searchable"
             android:value="com.apkgetter.SearchResultsActivity" />
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -55,23 +72,22 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
-    <activity
-        android:name="com.apkgetter.SearchResultsActivity"
-        android:label="@string/app_name"
-        android:launchMode="singleTop" >
-        <intent-filter>
-            <action android:name="android.intent.action.SEARCH" />
-        </intent-filter>
-        <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
-        </intent-filter>
-
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
         <meta-data
-            android:name="android.app.searchable"
-            android:resource="@xml/searchable" />
-    </activity>
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+    </application>
+
 </manifest>
