--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -1,26 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-package="com.locadoc_app.locadoc">
+    package="com.locadoc_app.locadoc">
 
-<<<<<<< HEAD
-<!-- To auto-complete the email text field in the login form with the user's emails -->
-<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-<uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-<activity android:name="com.apkgetter.SearchResultsActivity" android:label="@string/app_name"
-    android:launchMode="singleTop">
-    <intent-filter>
-        <action android:name="android.intent.action.SEARCH" />
-    </intent-filter>
-    <intent-filter>
-        <action android:name="android.intent.action.VIEW" />
-    </intent-filter>
-=======
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -39,19 +20,12 @@ package="com.locadoc_app.locadoc">
         <intent-filter>
             <action android:name="android.intent.action.VIEW" />
         </intent-filter>
->>>>>>> de04afd3d28413d2be58127775d99621f3a67635
 
-    <meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
-</activity>
+        <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
+    </activity>
 
-<<<<<<< HEAD
-<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
-    <activity android:name=".UI.Login.LoginActivity" android:label="@string/app_name" />
-    <activity android:name=".UI.Signup.SignUp" android:label="@string/title_activity_sign_up" />
-    <activity android:name=".UI.ConfirmSignUp.Activity_SignUp_Confirm" android:label="@string/title_activity_confirm_sign_up" />
-    <activity android:name=".UI.NewPassword.NewPasswordActivity" />
-=======
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -78,34 +52,27 @@ package="com.locadoc_app.locadoc">
             android:name=".UI.ConfirmSignUp.Activity_SignUp_Confirm"
             android:label="@string/title_activity_confirm_sign_up" />
         <activity android:name=".UI.NewPassword.NewPasswordActivity" />
->>>>>>> de04afd3d28413d2be58127775d99621f3a67635
 
-    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id" />
-    <meta-data android:name="android.app.default_searchable" android:value="com.apkgetter.SearchResultsActivity" />
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value="com.apkgetter.SearchResultsActivity" />
 
-    <activity android:name="com.facebook.FacebookActivity" android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-        android:label="@string/app_name" />
-    <activity android:name="com.facebook.CustomTabActivity" android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-<<<<<<< HEAD
-            <data android:scheme="@string/fb_login_protocol_scheme" />
-        </intent-filter>
-    </activity>
-    <activity android:name=".UI.HomePage.HomePageActivity" android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    <!--
-=======
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
@@ -117,23 +84,17 @@ package="com.locadoc_app.locadoc">
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <!--
->>>>>>> de04afd3d28413d2be58127775d99621f3a67635
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
-<<<<<<< HEAD
-    <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key" />
-</application>
-=======
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/LocAdoc_GoogleAPIKey" />
 
     </application>
->>>>>>> de04afd3d28413d2be58127775d99621f3a67635
 
 </manifest>
