--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -84,7 +84,7 @@
         <activity
             android:name=".UI.HomePage.HomePageActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -97,9 +97,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/LocAdoc_GoogleAPIKey" />
 
-        <activity android:name=".UI.TestDataBase">
-
-        </activity>
+        <activity android:name=".UI.TestDataBase"></activity>
+        <activity android:name=".Test"></activity>
     </application>
 
 </manifest>
