--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.locadoc_app.locadoc">
+          package="com.locadoc_app.locadoc">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <activity
         android:name="com.apkgetter.SearchResultsActivity"
         android:label="@string/app_name"
         android:launchMode="singleTop">
         <intent-filter>
-            <action android:name="android.intent.action.SEARCH" />
+            <action android:name="android.intent.action.SEARCH"/>
         </intent-filter>
         <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
+            <action android:name="android.intent.action.VIEW"/>
         </intent-filter>
 
         <meta-data
             android:name="android.app.searchable"
-            android:resource="@xml/searchable" />
+            android:resource="@xml/searchable"/>
     </activity>
 
     <application
@@ -36,50 +36,55 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
 
         <activity
             android:name=".UI.Login.LoginActivity"
             android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".UI.Signup.SignUp"
-            android:label="@string/title_activity_sign_up" />
+            android:label="@string/title_activity_sign_up"/>
         <activity
             android:name=".UI.ConfirmSignUp.Activity_SignUp_Confirm"
-            android:label="@string/title_activity_confirm_sign_up" />
-        <activity android:name=".UI.NewPassword.NewPasswordActivity" />
+            android:label="@string/title_activity_confirm_sign_up"/>
+        <activity android:name=".UI.NewPassword.NewPasswordActivity"/>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:value="@string/facebook_app_id"/>
         <meta-data
             android:name="android.app.default_searchable"
-            android:value="com.apkgetter.SearchResultsActivity" />
+            android:value="com.apkgetter.SearchResultsActivity"/>
 
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"/>
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
 
-                <data android:scheme="@string/fb_login_protocol_scheme" />
+                <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".UI.PasswordRecovery.PasswordRecovery"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"/>
         <activity
             android:name=".UI.HomePage.HomePageActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -90,15 +95,12 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/LocAdoc_GoogleAPIKey" />
+            android:value="@string/LocAdoc_GoogleAPIKey"/>
 
         <activity android:name=".UI.TestDataBase">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
+        <activity android:name=".UI.Setting.SettingActivity">
+        </activity>
     </application>
 
 </manifest>
