--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -99,7 +99,9 @@
 
         <activity android:name=".UI.TestDataBase">
         </activity>
-        <activity android:name=".UI.Setting.SettingActivity">
+        <activity android:name=".UI.Setting.SettingActivity"
+                  android:label="@string/app_name"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
