Update DynammoDB Helper and Model
Update DynammoDB Helper and Model

--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
         <activity
             android:name=".UI.Login.LoginActivity"
             android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".UI.Signup.SignUp"
@@ -92,12 +96,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/LocAdoc_GoogleAPIKey" />
 
-        <activity android:name=".UI.TestDataBase">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".UI.TestDataBase"></activity>
+        <activity android:name=".Test"></activity>
 
     </application>
 
