--- a/LocAdoc/app/build.gradle
+++ b/LocAdoc/app/build.gradle
@@ -29,13 +29,13 @@ dependencies {
     // AWS
     // google map
     compile 'commons-codec:commons-codec:1.3'
+    compile 'commons-codec:commons-codec:1.3'
     compile 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.6.2'
     compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'commons-codec:commons-codec:1.3'
     compile 'com.amazonaws:aws-android-sdk-core:2.3.2'
     compile 'com.amazonaws:aws-android-sdk-s3:2.3.2'
     compile 'com.amazonaws:aws-android-sdk-cognito:2.3.2'
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.android.gms:play-services-location:11.2.2'
     compile 'com.google.android.gms:play-services-maps:11.2.2'
+    compile 'com.github.barteksc:android-pdf-viewer:2.7.0'
     testCompile 'org.testng:testng:6.9.6'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
