--- a/LocAdoc/app/build.gradle
+++ b/LocAdoc/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -28,7 +28,6 @@ dependencies {
 
     // AWS
     // google map
-    compile 'commons-codec:commons-codec:1.3'
     compile 'commons-codec:commons-codec:1.3'
     compile 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.6.2'
     compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.2'
