--- a/LocAdoc/app/build.gradle
+++ b/LocAdoc/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     // AWS
     // google map
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'commons-codec:commons-codec:1.3'
     compile 'com.amazonaws:aws-android-sdk-cognitoidentityprovider:2.6.2'
     compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.2'
@@ -43,6 +44,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.2.2'
     compile 'com.google.android.gms:play-services-maps:11.2.2'
     compile 'com.github.barteksc:android-pdf-viewer:2.7.0'
+    compile 'com.itextpdf:itextg:5.5.9'
     testCompile 'org.testng:testng:6.9.6'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
