--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -81,7 +81,12 @@
             android:name=".UI.HomePage.HomePageActivity"
             android:label="@string/app_name"
 
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".UI.Setting.SettingActivity"
                   android:label="LocAdoc"
@@ -99,10 +104,6 @@
             android:value="@string/LocAdoc_GoogleAPIKey" />
 
         <activity android:name=".UI.TestDataBase" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         </activity>
         <activity android:name=".Test" />
         <activity android:name=".UI.PDFViewer.PDFViewer" />
