Add listView item in Settings
- Add listView item for Setting Listview
- make the resetpassword init() code as comment
- change initial activity into Login Activity in Android Manifest

--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -43,7 +43,13 @@
 
         <activity
             android:name=".UI.Login.LoginActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".UI.Signup.SignUp"
             android:label="@string/title_activity_sign_up"/>
@@ -86,7 +92,8 @@
         <activity
             android:name=".UI.Setting.SettingActivity"
             android:label="LocAdoc"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -100,11 +107,7 @@
             android:value="@string/LocAdoc_GoogleAPIKey"/>
 
         <activity android:name=".UI.TestDataBase">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".Test"/>
         <activity android:name=".UI.PDFViewer.PDFViewer"/>
