--- a/LocAdoc/app/build.gradle
+++ b/LocAdoc/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.2.2'
     compile 'com.github.barteksc:android-pdf-viewer:2.7.0'
     compile 'com.itextpdf:itextg:5.5.9'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'org.testng:testng:6.9.6'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
