--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -23,15 +23,11 @@
         <intent-filter>
             <action android:name="android.intent.action.VIEW"/>
         </intent-filter>
-
-        <meta-data
-            android:name="android.app.searchable"
-            android:resource="@xml/searchable"/>
     </activity>
 
     <application
         android:name=".LocAdocApp"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -86,6 +82,9 @@
             android:name=".UI.HomePage.HomePageActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
         </activity>
         <activity
             android:name=".UI.Setting.SettingActivity"
