--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -43,10 +43,10 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".UI.Signup.SignUp"
             android:label="@string/title_activity_sign_up"/>
@@ -71,8 +71,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
+
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
@@ -82,12 +84,13 @@
         <activity
             android:name=".UI.HomePage.HomePageActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable"/>
@@ -110,7 +113,6 @@
             android:value="@string/LocAdoc_GoogleAPIKey"/>
 
         <activity android:name=".UI.TestDataBase">
-
         </activity>
         <activity android:name=".Test"/>
         <activity android:name=".UI.PDFViewer.PDFViewer"/>
@@ -121,7 +123,8 @@
 
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
-            android:enabled="true" />
+            android:enabled="true"/>
+
     </application>
 
 </manifest>
