Update and Merge ResetPassword
Update SQLite in ResetPassword

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Diagrams.asta
 Diagrams.asta
 Diagrams.asta.lock
 LocAdoc/app/src/main/java/com/locadoc_app/locadoc/UI/Setting/ResetPassword.java
+LocAdoc/.idea/misc.xml
