--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
     <activity
         android:name="com.apkgetter.SearchResultsActivity"
         android:label="@string/app_name"
-        android:launchMode="singleTop">
+        android:launchMode="singleTop"
+        android:screenOrientation="portrait">
         <intent-filter>
             <action android:name="android.intent.action.SEARCH"/>
         </intent-filter>
@@ -63,29 +64,14 @@
             android:value="com.apkgetter.SearchResultsActivity"/>
 
         <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name"/>
-        <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-
-                <data android:scheme="@string/fb_login_protocol_scheme"/>
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".UI.PasswordRecovery.PasswordRecovery"
             android:label="@string/app_name"/>
         <activity
             android:name=".UI.HomePage.HomePageActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"/>
                 <action android:name="android.intent.action.VIEW"/>
@@ -98,7 +84,8 @@
         <activity
             android:name=".UI.Setting.SettingActivity"
             android:label="LocAdoc"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
         </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -115,7 +102,9 @@
         <activity android:name=".UI.TestDataBase">
         </activity>
         <activity android:name=".Test"/>
-        <activity android:name=".UI.PDFViewer.PDFViewer"/>
+        <activity
+            android:name=".UI.PDFViewer.PDFViewer"
+            android:screenOrientation="portrait"/>
         <activity android:name=".FilePicker">
         </activity>
         <activity android:name=".UI.Setting.ResetPassword">
