Added location check for pdf viewer and timer for homepage

--- a/LocAdoc/app/src/main/AndroidManifest.xml
+++ b/LocAdoc/app/src/main/AndroidManifest.xml
@@ -99,7 +99,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/LocAdoc_GoogleAPIKey"/>
 
-        <activity android:name=".UI.TestDataBase">
+        <activity android:name=".TestDataBase">
         </activity>
         <activity android:name=".Test"/>
         <activity
